--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,20 +1,41 @@
+
 <!doctype html>
 <html>
   <head>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Website of Kentaro Kuribayashi">
+    <meta name="author" content="Kentaro Kuribayashi">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || "kentarok.org" %></title>
 
-    <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <%= stylesheet_link_tag :site %>
-    <%= javascript_include_tag :all %>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <%= stylesheet_link_tag "normalize", "all" %>
+    <%= javascript_include_tag  "all" %>
   </head>
-
   <body class="<%= page_classes %>">
-    <%= yield %>
+
+  <div class="container">
+    <div class="header">
+      <div class="title"><%= current_page.data.title || "kentarok.org" %></div>
+      <% if current_page.data.sub_title %>
+      <div class="sub-title"><%= current_page.data.sub_title %></div>
+      <% end %>
+    </div>
+
+    <div class="body">
+      <%= yield %>
+    </div>
+  </div> <!-- /container -->
   </body>
 </html>
