--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website of Kentaro Kuribayashi">
-    <meta name="author" content="Kentaro Kuribayashi">
+    <meta name="description" content="Homepage of Nicolas Montanaro">
+    <meta name="author" content="Nicolas Montanaro">
 
-    <title><%= current_page.data.title || "kentarok.org" %></title>
+    <title><%= current_page.data.title || "nicolas.moe" %></title>
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -20,14 +20,14 @@
     <![endif]-->
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <%= stylesheet_link_tag "normalize", "all" %>
+    <%= stylesheet_link_tag "_normalize", "all" %>
     <%= javascript_include_tag  "all" %>
   </head>
   <body class="<%= page_classes %>">
 
   <div class="container">
     <div class="header">
-      <div class="title"><%= current_page.data.title || "kentarok.org" %></div>
+      <div class="title"><%= current_page.data.title || "nicolas.moe" %></div>
       <% if current_page.data.sub_title %>
       <div class="sub-title"><%= current_page.data.sub_title %></div>
       <% end %>
