--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,7 +20,7 @@
     <![endif]-->
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <%= stylesheet_link_tag "_normalize", "all" %>
+    <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag  "all" %>
   </head>
   <body class="<%= page_classes %>">
