--- a/css/sane.css
+++ b/css/sane.css
@@ -25,7 +25,7 @@ body {
 	max-width: 50em;
 	line-height: 1.5;
 	font-size: 1rem;
-	color: #8492A6;
+	color: rgb(104, 112, 124);
 	padding: 0 1em;
 }
 
