styling and resume updates

--- a/css/sane.css
+++ b/css/sane.css
@@ -1,26 +1,103 @@
 @font-face {
-	font-family: 'FaktProSoft';
-	src: url('../font/FaktSoftPro-Normal.woff');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'Go';
+    src: url('../font/GoMedium.woff2') format('woff2'),
+        url('../font/GoMedium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: 'FaktProSoft';
-	src: url('../font/FaktSoftPro-Medium.woff');
-	font-weight: bold;
-	font-style: normal;
+    font-family: 'Go Mono';
+    src: url('../font/GoMono.woff2') format('woff2'),
+        url('../font/GoMono.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: 'FaktProSoft';
-	src: url('../font/FaktSoftPro-Blond.woff');
-	font-weight: italic;
-	font-style: normal;
+    font-family: 'Go Mono';
+    src: url('../font/GoMono-BoldItalic.woff2') format('woff2'),
+        url('../font/GoMono-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
 }
+
+@font-face {
+    font-family: 'Go';
+    src: url('../font/Go-Italic.woff2') format('woff2'),
+        url('../font/Go-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Go';
+    src: url('../font/GoMedium-Italic.woff2') format('woff2'),
+        url('../font/GoMedium-Italic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Go';
+    src: url('../font/Go-BoldItalic.woff2') format('woff2'),
+        url('../font/Go-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Go Smallcaps';
+    src: url('../font/GoSmallcaps.woff2') format('woff2'),
+        url('../font/GoSmallcaps.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Go Mono';
+    src: url('../font/GoMono-Italic.woff2') format('woff2'),
+        url('../font/GoMono-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Go Smallcaps';
+    src: url('../font/GoSmallcaps-Italic.woff2') format('woff2'),
+        url('../font/GoSmallcaps-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Go Mono';
+    src: url('../font/GoMono-Bold.woff2') format('woff2'),
+        url('../font/GoMono-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Go';
+    src: url('../font/Go-Bold.woff2') format('woff2'),
+        url('../font/Go-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Go';
+    src: url('../font/GoRegular.woff2') format('woff2'),
+        url('../font/GoRegular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 
 body {
-	font-family: "FaktProSoft";
+	font-family: "Go";
 	margin: 0 auto;
 	max-width: 50em;
 	line-height: 1.5;
@@ -30,19 +107,19 @@ body {
 }
 
 h1 {
-	font-family: "FaktProSoft";
+	font-family: "Go Smallcaps";
 	color: #3C4858;
 }
 
 h2 {
-	font-family: "FaktProSoft";
+	font-family: "Go Smallcaps";
 	color: #3C4858;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
 }
 
 h3 {
-	font-family: "FaktProSoft";
+	font-family: "Go Smallcaps";
 	color: #3C4858;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
@@ -66,6 +143,7 @@ code {
 	word-wrap: break-word;
 	padding: 2px 4px;
 	vertical-align: text-bottom;
+	font-family: "Go Mono";
 }
 
 pre {
@@ -78,12 +156,12 @@ a {
 }
 
 strong {
-	font-family: "FaktProSoft";
+	font-family: "Go";
 	color: #3C4858;
 }
 
 em {
-	font-family: "FaktProSoft";
+	font-family: "Go";
 }
 
 #subtitle {
